--- a/meson.build
+++ b/meson.build
@@ -61,8 +61,9 @@ py3.extension_module('Delhommeau_float32',
            float32, libDelhommeau_src, Delhommeau_float32_f2py_wrapper, incdir_f2py+'/fortranobject.c',
            include_directories: inc_np,
            dependencies : py3_dep,
-           fortran_args : ['-cpp', '-fopenmp'],
-           link_args : ['-fopenmp', '-lquadmath'],
+           fortran_args : ['-cpp'], #, '-fopenmp'],
+           c_args : ['-lquadmath'],
+           # link_args : ['-fopenmp'],
            install : true,
            subdir : 'capytaine/green_functions/libs/')
 
@@ -70,8 +71,8 @@ py3.extension_module('Delhommeau_float64',
            float64, libDelhommeau_src, Delhommeau_float64_f2py_wrapper, incdir_f2py+'/fortranobject.c',
            include_directories: inc_np,
            dependencies : py3_dep,
-           fortran_args : ['-cpp', '-fopenmp'],
-           link_args : ['-fopenmp', '-lquadmath'],
+           fortran_args : ['-cpp'], #, '-fopenmp'],
+           # link_args : ['-fopenmp'],
            install : true,
            subdir : 'capytaine/green_functions/libs/')
 
@@ -79,8 +80,8 @@ py3.extension_module('XieDelhommeau_float32',
            float32, libDelhommeau_src, XieDelhommeau_float32_f2py_wrapper, incdir_f2py+'/fortranobject.c',
            include_directories: inc_np,
            dependencies : py3_dep,
-           fortran_args : ['-cpp', '-DXIE_CORRECTION', '-fopenmp'],
-           link_args : ['-fopenmp', '-lquadmath'],
+           fortran_args : ['-cpp', '-DXIE_CORRECTION'], #, '-fopenmp'],
+           # link_args : ['-fopenmp'],
            install : true,
            subdir : 'capytaine/green_functions/libs/')
 
@@ -88,7 +89,7 @@ py3.extension_module('XieDelhommeau_float64',
            float64, libDelhommeau_src, XieDelhommeau_float64_f2py_wrapper, incdir_f2py+'/fortranobject.c',
            include_directories: inc_np,
            dependencies : py3_dep,
-           fortran_args : ['-cpp', '-DXIE_CORRECTION', '-fopenmp'],
-           link_args : ['-fopenmp', '-lquadmath'],
+           fortran_args : ['-cpp', '-DXIE_CORRECTION'], #, '-fopenmp'],
+           # link_args : ['-fopenmp'],
            install : true,
            subdir : 'capytaine/green_functions/libs/')
