Try another way to set up dependency to OpenMP

--- a/meson.build
+++ b/meson.build
@@ -57,19 +57,15 @@ XieDelhommeau_float64_f2py_wrapper = custom_target('XieDelhommeau_float64module.
 install_subdir('capytaine', install_dir: py3.get_install_dir(pure: false))
 # Alternatively: would need to list all the .py files and use py3.install_source()
 
-if meson.get_compiler('c').get_id() == 'clang'
-  args = ['-cpp']
-  link_args = []
-else
-  args = ['-cpp', '-fopenmp']
-  link_args = ['-fopenmp']
-endif
+omp = dependency('openmp')
 
+args = ['-cpp']
+link_args = []
 
 py3.extension_module('Delhommeau_float32',
            float32, libDelhommeau_src, Delhommeau_float32_f2py_wrapper, incdir_f2py+'/fortranobject.c',
            include_directories: inc_np,
-           dependencies : py3_dep,
+           dependencies : [py3_dep, omp],
            fortran_args : args,
            link_args : link_args,
            install : true,
@@ -78,7 +74,7 @@ py3.extension_module('Delhommeau_float32',
 py3.extension_module('Delhommeau_float64',
            float64, libDelhommeau_src, Delhommeau_float64_f2py_wrapper, incdir_f2py+'/fortranobject.c',
            include_directories: inc_np,
-           dependencies : py3_dep,
+           dependencies : [py3_dep, omp],
            fortran_args : args,
            link_args : link_args,
            install : true,
@@ -87,7 +83,7 @@ py3.extension_module('Delhommeau_float64',
 py3.extension_module('XieDelhommeau_float32',
            float32, libDelhommeau_src, XieDelhommeau_float32_f2py_wrapper, incdir_f2py+'/fortranobject.c',
            include_directories: inc_np,
-           dependencies : py3_dep,
+           dependencies : [py3_dep, omp],
            fortran_args : args + ['-DXIE_CORRECTION'],
            link_args : link_args,
            install : true,
@@ -96,7 +92,7 @@ py3.extension_module('XieDelhommeau_float32',
 py3.extension_module('XieDelhommeau_float64',
            float64, libDelhommeau_src, XieDelhommeau_float64_f2py_wrapper, incdir_f2py+'/fortranobject.c',
            include_directories: inc_np,
-           dependencies : py3_dep,
+           dependencies : [py3_dep, omp],
            fortran_args : args + ['-DXIE_CORRECTION'],
            link_args : link_args,
            install : true,
