Disable Windows for now.

--- a/.github/workflows/build_wheels.yaml
+++ b/.github/workflows/build_wheels.yaml
@@ -5,7 +5,7 @@ on:
   push:
     tags:
       - v*
-  pull_request:
+  # pull_request:
     # branches:
     #   - main
     # types:
@@ -18,9 +18,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        # os: [ubuntu-20.04, windows-2019, macos-11]
-        # os: [ubuntu-20.04, macos-11]
-        os: [windows-2022]
+        os: [ubuntu-20.04, macos-11]
 
     steps:
       - uses: actions/checkout@v3
@@ -35,10 +33,6 @@ jobs:
           sudo mkdir /usr/local/gfortran
           sudo ln -s /usr/local/Cellar/gcc@11/*/lib/gcc/11 /usr/local/gfortran/lib
           gfortran --version
-
-      # - name: Provide gfortran (Windows)
-      #   if: runner.os == 'Windows'
-      #   uses: msys2/setup-msys2@v2
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.12.3
