Build wheels for Linux and MacOS with Github Actions (#329)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,6 @@ ci = ["pytest", "hypothesis"]
 build-backend = 'mesonpy'
 requires = ["meson-python", "oldest-supported-numpy", "charset-normalizer"]
 
+[tool.cibuildwheel]
+test-requires = ["pytest", "hypothesis"]
+test-command = "pytest {project}/pytest/"
