--- a/meson.build
+++ b/meson.build
@@ -57,38 +57,48 @@ XieDelhommeau_float64_f2py_wrapper = custom_target('XieDelhommeau_float64module.
 install_subdir('capytaine', install_dir: py3.get_install_dir(pure: false))
 # Alternatively: would need to list all the .py files and use py3.install_source()
 
+if build_machine.system() == 'darwin'
+  omp = []  # Waiting for https://github.com/mesonbuild/meson/issues/7435
+else
+  omp = dependency('openmp')
+endif
+
+args = ['-cpp']
+link_args = []
+deps = [py3_dep, omp]
+
 py3.extension_module('Delhommeau_float32',
            float32, libDelhommeau_src, Delhommeau_float32_f2py_wrapper, incdir_f2py+'/fortranobject.c',
            include_directories: inc_np,
-           dependencies : py3_dep,
-           fortran_args : ['-cpp', '-fopenmp'],
-           link_args : ['-fopenmp'],
+           dependencies : deps,
+           fortran_args : args,
+           link_args : link_args,
            install : true,
            subdir : 'capytaine/green_functions/libs/')
 
 py3.extension_module('Delhommeau_float64',
            float64, libDelhommeau_src, Delhommeau_float64_f2py_wrapper, incdir_f2py+'/fortranobject.c',
            include_directories: inc_np,
-           dependencies : py3_dep,
-           fortran_args : ['-cpp', '-fopenmp'],
-           link_args : ['-fopenmp'],
+           dependencies : deps,
+           fortran_args : args,
+           link_args : link_args,
            install : true,
            subdir : 'capytaine/green_functions/libs/')
 
 py3.extension_module('XieDelhommeau_float32',
            float32, libDelhommeau_src, XieDelhommeau_float32_f2py_wrapper, incdir_f2py+'/fortranobject.c',
            include_directories: inc_np,
-           dependencies : py3_dep,
-           fortran_args : ['-cpp', '-fopenmp', '-DXIE_CORRECTION'],
-           link_args : ['-fopenmp'],
+           dependencies : deps,
+           fortran_args : args + ['-DXIE_CORRECTION'],
+           link_args : link_args,
            install : true,
            subdir : 'capytaine/green_functions/libs/')
 
 py3.extension_module('XieDelhommeau_float64',
            float64, libDelhommeau_src, XieDelhommeau_float64_f2py_wrapper, incdir_f2py+'/fortranobject.c',
            include_directories: inc_np,
-           dependencies : py3_dep,
-           fortran_args : ['-cpp', '-fopenmp', '-DXIE_CORRECTION'],
-           link_args : ['-fopenmp'],
+           dependencies : deps,
+           fortran_args : args + ['-DXIE_CORRECTION'],
+           link_args : link_args,
            install : true,
            subdir : 'capytaine/green_functions/libs/')
