--- a/.github/workflows/windows_intel.yaml
+++ b/.github/workflows/windows_intel.yaml
@@ -1,19 +1,24 @@
 name: Build on Windows
 
+env:
+  WINDOWS_HPCKIT_URL: https:/registrationcenter-download.intel.com/akdlm/IRC_NAS/2a13d966-fcc5-4a66-9fcc-50603820e0c9/w_HPCKit_p_2023.1.0.46357_offline.exe
+  WINDOWS_FORTRAN_COMPONENTS: intel.oneapi.win.ifort-compiler
+  SAMPLES_TAG: 2023.1.0
+  VS_VER: vs2022
+
 on:
   pull_request:
 
 jobs:
   build_windows_fortran:
     runs-on: windows-latest
+    defaults:
+      run:
+        shell: bash
     steps:
       - uses: actions/checkout@v2
-      - name: Setup Intel Fortran
-        uses: modflowpy/install-intelfortran-action@v1
-      - uses: actions/setup-python@v3
-        with:
-          python-version: '3.11'
-      - name: Install
-        run: pip install .
-      - name: Test
-        run: cd /tmp/ && pytest $GITHUB_WORKSPACE/pytest/
+      # Source: https://github.com/oneapi-src/oneapi-ci
+      - name: install
+        run: .github/workflows/install_windows.bat $WINDOWS_HPCKIT_URL $WINDOWS_FORTRAN_COMPONENTS
+      - name: build
+        run: .github/workflows/build_windows.bat fortran $VS_VER $SAMPLES_TAG
