Trying to fix windows wheels.

--- a/meson.build
+++ b/meson.build
@@ -65,7 +65,7 @@ else
 endif
 
 args = ['-cpp']
-link_args = ['-lquadmath']
+link_args = ['-lquadmath']  # Required for the Windows build with cibuildwheel
 deps = [py3_dep, omp]
 
 py3.extension_module('Delhommeau_float32',
