--- a/.github/workflows/build_wheels.yaml
+++ b/.github/workflows/build_wheels.yaml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04, macos-11]
+        os: [ubuntu-20.04, macos-11, windows-2019]
 
     steps:
       - uses: actions/checkout@v3
@@ -38,10 +38,10 @@ jobs:
         uses: pypa/cibuildwheel@v2.12.3
         env:
           CIBW_SKIP: "pp* *i686* *musllinux* *win32*"
-        # # Package the DLL dependencies in the wheel for windows (done by default for the other platforms).
-        # # delvewheel cannot mangle the libraries, stripping does not work.
-        #   CIBW_BEFORE_BUILD_WINDOWS: pip install delvewheel
-        #   CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: "delvewheel show {wheel} && delvewheel repair -w {dest_dir} {wheel} --no-mangle-all"
+        # Package the DLL dependencies in the wheel for windows (done by default for the other platforms).
+        # delvewheel cannot mangle the libraries, stripping does not work.
+          CIBW_BEFORE_BUILD_WINDOWS: pip install delvewheel
+          CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: "delvewheel show {wheel} && delvewheel repair -w {dest_dir} {wheel} --no-mangle-all"
         # with:
         #   package-dir: .
         #   output-dir: wheelhouse
