--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,13 @@ dependencies = ["numpy", "scipy", "pandas>=1.3", "xarray"]
 urls = {repository = "https://github.com/capytaine/capytaine"}
 readme = "README.md"
 license = {file = "LICENSE"}
+classifiers = [
+  "Programming Language :: Python",
+  "Programming Language :: Fortran",
+  "Intended Audience :: Science/Research",
+  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
+  "Topic :: Scientific/Engineering",
+]
 scripts = {capytaine = "capytaine.ui.cli:main"}
 
 dynamic = ['version']
