--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "capytaine"
 description = "Python BEM solver for linear potential flow, based on Nemoh"
 authors = [{name = "Matthieu Ancellin", email = "matthieu.ancellin@eurobios.com"}]
 requires-python = ">=3.7"
-dependencies = ["numpy", "scipy", "pandas>=1.3", "xarray"]
+dependencies = ["numpy", "scipy", "pandas>=1.3", "xarray", "rich"]
 urls = {repository = "https://github.com/capytaine/capytaine"}
 readme = "README.md"
 license = {file = "LICENSE"}
