--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,14 +1,15 @@
 name: Build and deploy documentation
 
 on:
-  push:
-    branches:
-      - master
-    paths:
-      - 'docs/**'
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  pull_request:
+  # push:
+  #   branches:
+  #     - master
+  #   paths:
+  #     - 'docs/**'
+  #
+  # # Allows you to run this workflow manually from the Actions tab
+  # workflow_dispatch:
 
 jobs:
   build-and-deploy:
