--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Deploy pages
         uses: JamesIves/github-pages-deploy-action@releases/v4
         with:
-          folder: ./docs/build/_html/
+          folder: ../docs/build/_html/
           repository-name: capytaine/capytaine.github.io
           branch: main
           target-folder: master/
