Fix locked env test.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,7 @@ dynamic = ['version']
 
 [project.optional-dependencies]
 build = ["numpy", "ninja", "meson-python", "charset-normalizer"]
-ci = [
-    "pytest",
-    "bemio @ https://github.com/mancellin/bemio/archive/fa3a6d3d4b0862491c3723919ec8ee45cc7d055a.zip",
-]
+test = ["pytest", "bemio @ https://github.com/mancellin/bemio/archive/fa3a6d3d4b0862491c3723919ec8ee45cc7d055a.zip"]
 docs = ["sphinx", "sphinx-toolbox", "sphinxcontrib-proof", "sphinxcontrib-mermaid"]
 
 [build-system]
