--- a/.github/workflows/test_new_commits.yaml
+++ b/.github/workflows/test_new_commits.yaml
@@ -1,4 +1,4 @@
-name: Build and run test suite in a fixed environment
+name: Build and test in fixed environments
 
 on:
   push:
@@ -19,16 +19,16 @@ env:
   # Colors for nox
 
 jobs:
-  run_tests:
+  build_and_test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ['3.8', '3.11']
     steps:
     - name: Checkout repository and submodules
-      uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v3
+      uses: actions/checkout@v4
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
     - name: Set up nox
