--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,3 +27,14 @@ repos:
       - id: mixed-line-ending
       # Trim trailing whitespaces
       - id: trailing-whitespace
+
+  # - repo: https://github.com/astral-sh/ruff-pre-commit
+  #   rev: "v0.0.291"
+  #   hooks:
+  #     - id: ruff
+
+  - repo: https://github.com/codespell-project/codespell
+    rev: "v2.2.5"
+    hooks:
+      - id: codespell
+        args: ["-L", "ba,informations,inout,ist,lamda,ment,noe,periode,sur"]
