Set up pre-commit and fix some styling issues (#402)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,3 +30,10 @@ requires = ["meson-python", "oldest-supported-numpy", "charset-normalizer"]
 [tool.cibuildwheel]
 test-requires = ["pytest"]
 test-command = "pytest {project}/pytest/"
+
+[tool.ruff]
+select = ["E", "F", "W", "NPY"]
+ignore = ["E501"]
+
+[tool.ruff.per-file-ignores]
+"__init__.py" = ["E402", "F401"]
