--- a/.github/workflows/build_wheels.yaml
+++ b/.github/workflows/build_wheels.yaml
@@ -5,6 +5,7 @@ on:
   push:
     tags:
       - v*
+  pull_request:
   schedule:
     - cron: '5 5 5/15 * *'  # On the 5th and 20th of each month at 5:05
 
@@ -27,7 +28,7 @@ jobs:
           version: '13'
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.12.3
+        uses: pypa/cibuildwheel@v2.16.2
         env:
           CIBW_SKIP: "pp* *i686* *musllinux* *win32*"
         # Package the DLL dependencies in the wheel for windows (done by default for the other platforms).
