--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,8 +19,9 @@ scripts = {capytaine = "capytaine.ui.cli:main"}
 dynamic = ['version']
 
 [project.optional-dependencies]
+optional = ["matplotlib", "joblib>=1.3", "meshio", "bemio @ https://github.com/mancellin/bemio/archive/fa3a6d3d4b0862491c3723919ec8ee45cc7d055a.zip"]
 build = ["numpy", "ninja", "meson-python", "charset-normalizer"]
-test = ["pytest", "bemio @ https://github.com/mancellin/bemio/archive/fa3a6d3d4b0862491c3723919ec8ee45cc7d055a.zip", "joblib>=1.3"]
+test = ["pytest"]
 docs = ["sphinx", "sphinx-toolbox", "sphinxcontrib-proof", "sphinxcontrib-mermaid"]
 
 [build-system]
