Update ruff section in Pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,9 +37,9 @@ requires = [
 test-requires = ["pytest"]
 test-command = "pytest {project}/pytest/"
 
-[tool.ruff]
+[tool.ruff.lint]
 select = ["E", "F", "W", "NPY"]
 ignore = ["E501"]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["E402", "F401"]
