--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "capytaine"
 description = "Python BEM solver for linear potential flow, based on Nemoh"
 authors = [{name = "Matthieu Ancellin", email = "matthieu.ancellin@eurobios.com"}]
 requires-python = ">=3.8"
-dependencies = ["numpy", "scipy", "pandas>=1.3", "xarray", "rich"]
+dependencies = ["numpy<2", "scipy", "pandas>=1.3", "xarray", "rich"]
 urls = {repository = "https://github.com/capytaine/capytaine"}
 readme = "README.md"
 license = {file = "LICENSE"}
@@ -26,15 +26,20 @@ docs = ["sphinx", "sphinx-toolbox", "sphinxcontrib-proof", "sphinxcontrib-mermai
 
 [build-system]
 build-backend = 'mesonpy'
-requires = ["meson-python", "oldest-supported-numpy", "charset-normalizer"]
+requires = [
+    "meson-python",
+    "charset-normalizer",
+    "oldest-supported-numpy; python_version < '3.9'",
+    "numpy == 1.26.2; python_version >= '3.9'",
+]
 
 [tool.cibuildwheel]
 test-requires = ["pytest"]
 test-command = "pytest {project}/pytest/"
 
-[tool.ruff]
+[tool.ruff.lint]
 select = ["E", "F", "W", "NPY"]
 ignore = ["E501"]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["E402", "F401"]
