--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,20 +26,15 @@ docs = ["sphinx", "sphinx-toolbox", "sphinxcontrib-proof", "sphinxcontrib-mermai
 
 [build-system]
 build-backend = 'mesonpy'
-requires = [
-    "meson-python",
-    "charset-normalizer",
-    "oldest-supported-numpy; python_version < '3.9'",
-    "numpy >= 1.26; python_version >= '3.9'",  # To be updated to Numpy 2.0 as soon as possible when Numpy 2.0 is released
-]
+requires = ["meson-python", "oldest-supported-numpy", "charset-normalizer"]
 
 [tool.cibuildwheel]
 test-requires = ["pytest"]
 test-command = "pytest {project}/pytest/"
 
-[tool.ruff.lint]
+[tool.ruff]
 select = ["E", "F", "W", "NPY"]
 ignore = ["E501"]
 
-[tool.ruff.lint.per-file-ignores]
+[tool.ruff.per-file-ignores]
 "__init__.py" = ["E402", "F401"]
