--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "capytaine"
 description = "Python BEM solver for linear potential flow, based on Nemoh"
 authors = [{name = "Matthieu Ancellin", email = "matthieu.ancellin@eurobios.com"}]
 requires-python = ">=3.8"
-dependencies = ["numpy<2", "scipy", "pandas>=1.3", "xarray", "rich"]
+dependencies = ["numpy>=1.20", "scipy", "pandas>=1.3", "xarray", "rich"]
 urls = {repository = "https://github.com/capytaine/capytaine"}
 readme = "README.md"
 license = {file = "LICENSE"}
@@ -30,7 +30,7 @@ requires = [
     "meson-python",
     "charset-normalizer",
     "oldest-supported-numpy; python_version < '3.9'",
-    "numpy == 1.26.2; python_version >= '3.9'",
+    "numpy>=2.0.0rc1,<2.3; python_version >= '3.9'",
 ]
 
 [tool.cibuildwheel]
