Try again to run the workflow.

--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -2,10 +2,10 @@ name: Build and deploy documentation
 
 on:
   push:
-    branches:
-      - master
-    paths:
-      - 'docs/**'
+    # branches:
+    #   - master
+    # paths:
+    #   - 'docs/**'
 
   pull_request:
     # paths:
