--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -8,8 +8,8 @@ on:
       - 'docs/**'
 
   pull_request:
-    # paths:
-    #   - 'docs/**'
+    paths:
+      - 'docs/**'
 
   workflow_dispatch:
 
