--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -13,17 +13,23 @@ on:
 
   workflow_dispatch:
 
+
 jobs:
   build:
+
     runs-on: ubuntu-latest
+
     steps:
+
       - name: Checkout
         uses: actions/checkout@v4
 
       - uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
 
       - name: Install Capytaine and other dependencies
-        run: pip install .[docs]
+        run: pip install .[optional,docs]
 
       - name: Build documentation
         run: cd docs && make
