--- a/.github/workflows/build_wheels.yaml
+++ b/.github/workflows/build_wheels.yaml
@@ -2,6 +2,7 @@ name: Build wheels
 
 on:
   workflow_dispatch:
+  pull_request:
   push:
     tags:
       - v*
@@ -41,4 +42,5 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
+          name: wheels-${{ matrix.os }}
           path: ./wheelhouse/*.whl
