--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ requires = [
     "meson-python",
     "charset-normalizer",
     "oldest-supported-numpy; python_version < '3.9'",
-    "numpy>=2.0.0rc1,<2.3; python_version >= '3.9'",
+    "numpy>=2.0.0rc1; python_version >= '3.9'",
 ]
 
 [tool.cibuildwheel]
