--- a/.github/workflows/build_wheels.yaml
+++ b/.github/workflows/build_wheels.yaml
@@ -2,6 +2,7 @@ name: Build wheels
 
 on:
   workflow_dispatch:
+  pull_request:
   push:
     tags:
       - v*
@@ -15,7 +16,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04, macos-11, windows-2019]
+        os: [ubuntu-20.04, macos-11, macos-14, windows-2019]
+            # MacOS<=13 are Intel, while MacOS 14 is Apple Silicon
 
     steps:
       - uses: actions/checkout@v4
