--- a/.github/workflows/test_new_commits.yaml
+++ b/.github/workflows/test_new_commits.yaml
@@ -73,3 +73,7 @@ jobs:
       run: make example && examples/minimal/minimal_example.bin
       # Soundness of the results is not tested, only that the compiling and
       # execution are succeeding.
+
+    - name: Run simple benchmark
+      working-directory: capytaine/green_functions/libDelhommeau/
+      run: make run_bench_rankine && make run_bench_tab
